--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,19 @@
-# History files
-.Rhistory
-.Rapp.history
+*.tmp
 
-# Session Data files
-.RData
+# Word temporary
+~$*.doc*
 
-# User-specific files
-.Ruserdata
+# Word Auto Backup File
+Backup of *.doc*
 
-# Example code in package build process
-*-Ex.R
+# Excel temporary
+~$*.xls*
 
-# Output files from R CMD build
-/*.tar.gz
+# Excel Backup File
+*.xlk
 
-# Output files from R CMD check
-/*.Rcheck/
+# PowerPoint temporary
+~$*.ppt*
 
-# RStudio files
-.Rproj.user/
-
-# produced vignettes
-vignettes/*.html
-vignettes/*.pdf
-
-# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
-.httr-oauth
-
-# knitr and R markdown default cache directories
-*_cache/
-/cache/
-
-# Temporary files created by R markdown
-*.utf8.md
-*.knit.md
-
-# R Environment Variables
-.Renviron
+# Visio autosave temporary files
+*.~vsd*
